<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    >
    <data>

        <variable
            name="viewmodel"
            type="com.example.myapplication.ui.regestration.RegisterViewModel" />

    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <EditText
        android:id="@+id/email_et"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="344dp"
        android:background="@color/white1"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:text="@={viewmodel.emailText}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@color/white1"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:text="@={viewmodel.passwordText}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_et" />

    <EditText
        android:id="@+id/display_nsme"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="28dp"
        android:background="@color/white1"
        android:ems="10"
        android:hint="@string/display_name"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:padding="10dp"
        android:text="@={viewmodel.displayNameText}"
        app:layout_constraintBottom_toTopOf="@+id/email_et"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="49dp"
        android:enabled="@{!viewmodel.isCreatingAccount()}"
        android:onClick="@{() -> viewmodel.createAccountPressed()}"

        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_et"
        tools:enabled="@{true}" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>