<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.myapplication.ui.login.LoginViewModel" />

    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <EditText
        android:id="@+id/email_et"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="284dp"
        android:background="@color/white1"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:text="@={viewmodel.emailText}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@color/white1"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:text="@={viewmodel.passwordText}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_et" />

    <Button
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="180dp"


        android:enabled="@{!viewmodel.isLoggingIn()}"
        android:onClick="@{() -> viewmodel.loginPressed()}"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_et"
        tools:enabled="@{true}" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>