<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.sittings.SittingsFragment">

    <data>

        <variable
            name="viewmodel"
            type="com.example.myapplication.ui.sittings.SettingsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/userImageCardView"
            android:layout_width="160dp"
            android:layout_height="119dp"
            android:layout_marginTop="36dp"
            app:cardCornerRadius="60dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@android:color/white"
            app:strokeWidth="2dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="158dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:bind_image_url="@{viewmodel.userInfo.profileImageUrl}"
                tools:src="@tools:sample/avatars" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/nameText"
            style="@style/BoldText"
            android:layout_width="91dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@{viewmodel.userInfo.displayName}"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userImageCardView"
            tools:text="@string/Name" />

        <TextView
            android:id="@+id/statusText"
            style="@style/MessageSeen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLength="40"
            android:singleLine="true"
            android:text="@{viewmodel.userInfo.status}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameText"
            tools:text="@string/status" />

        <Button
            android:id="@+id/changeImageButton"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/inner_buttom"
            android:onClick="@{() -> viewmodel.changeUserImagePressed()}"
            android:text="@string/change_image"
            android:textColor="@color/blueText"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusText" />

        <Button
            android:id="@+id/changeStatusButton"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/inner_buttom"
            android:onClick="@{() -> viewmodel.changeUserStatusPressed()}"
            android:text="@string/change_status"
            android:textColor="@color/blueText"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeImageButton" />

        <Button
            android:id="@+id/logoutButton"
            style="@style/VeryBoldText"
            android:layout_width="164dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="52dp"
            android:layout_marginBottom="260dp"
            android:background="@drawable/buttom"
            android:drawableLeft="@drawable/icons8_sign_out_48"
            android:onClick="@{() -> viewmodel.logoutUserPressed()}"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeStatusButton"
            app:layout_constraintVertical_bias="0.154" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>