<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewmodel"
            type="com.example.myapplication.ui.notification.NotificationsViewModel" />

        <variable
            name="userinfo"
            type="com.example.myapplication.data.database.entity.UserInfo" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:padding="10dp"
        android:background="@color/white1"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="104dp"
            android:layout_height="116dp"
            android:layout_marginEnd="6dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.057"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:bind_image_url="@{userinfo.profileImageUrl}"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="149dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="98dp"
            android:layout_marginBottom="27dp"
            android:text="@{userinfo.displayName}"
            android:textColor="@color/blueText"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/Display_name" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="165dp"
            android:text="@string/new_friend_request"
            android:textColor="@color/blueText"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <Button
            android:id="@+id/accept_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="84dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:onClick="@{() -> viewmodel.acceptNotificationPressed(userinfo)}"
            android:text="@string/accept"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="74dp"
            android:onClick="@{() -> viewmodel.declineNotificationPressed(userinfo)}"
            android:text="@string/decline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/accept_btn"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>