<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.profil.ProfileFragment">


    <data>

        <import type="android.view.View" />

        <import type="com.example.myapplication.ui.profil.ProfileViewModel" />

        <variable
            name="viewmodel"
            type="com.example.myapplication.ui.profil.ProfileViewModel" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/userImageCardView"
            android:layout_width="148dp"
            android:layout_height="132dp"
            android:layout_marginTop="128dp"
            app:cardCornerRadius="60dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@android:color/white"
            app:strokeWidth="2dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:bind_image_url="@{viewmodel.otherUser.info.profileImageUrl}"
                tools:src="@tools:sample/avatars[0]" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/nameText"
            style="@style/BoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="#00F8F9FA"
            android:gravity="center"
            android:text="@{viewmodel.otherUser.info.displayName}"
            android:textColor="@color/blueText"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.469"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userImageCardView"
            tools:text="@string/Name" />

        <TextView
            android:id="@+id/statusText"
            style="@style/MessageSeen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#00F8F9FA"
            android:maxLength="40"
            android:singleLine="true"
            android:text="@{viewmodel.otherUser.info.status}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameText"
            tools:text="Status" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/statesLayout"
            android:layout_width="229dp"
            android:layout_height="110dp"
            android:layout_marginBottom="192dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusText"
            app:layout_constraintVertical_bias="0.73">

            <Button
                android:id="@+id/removeFriendButton"
                android:layout_width="152dp"
                android:layout_height="56dp"
                android:background="@drawable/inner_buttom"
                android:onClick="@{() -> viewmodel.removeFriendPressed()}"
                android:text="@string/remove_friend"
                android:textSize="16sp"
                android:visibility="@{viewmodel.layoutState == viewmodel.layoutState.IS_FRIEND? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone" />

            <Button
                android:id="@+id/requestSentButton"
                android:layout_width="152dp"
                android:layout_height="56dp"
                android:background="@drawable/inner_buttom"
                android:enabled="false"
                android:text="@string/request_sent"
                android:textSize="16sp"
                android:visibility="@{viewmodel.layoutState == viewmodel.layoutState.REQUEST_SENT? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone" />

            <Button
                android:id="@+id/acceptRequestButton"
                android:layout_width="152dp"
                android:layout_height="56dp"
                android:background="@drawable/inner_buttom"
                android:onClick="@{() -> viewmodel.acceptFriendRequestPressed()}"
                android:text="@string/accept_friend_request"
                android:textSize="16sp"
                android:visibility="@{viewmodel.layoutState == viewmodel.layoutState.ACCEPT_DECLINE? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone" />

            <Button
                android:id="@+id/declineRequestButton"
                android:layout_width="152dp"
                android:layout_height="56dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/inner_buttom"
                android:onClick="@{() -> viewmodel.declineFriendRequestPressed()}"
                android:text="@string/decline_friend_request"
                android:textSize="16sp"
                android:visibility="@{viewmodel.layoutState == viewmodel.layoutState.ACCEPT_DECLINE? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/acceptRequestButton"
                tools:visibility="gone" />

            <Button
                android:id="@+id/addFriendButton"
                android:layout_width="152dp"
                android:layout_height="56dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/buttom"
                android:onClick="@{() -> viewmodel.addFriendPressed()}"
                android:text="@string/add_friend"
                android:textSize="16sp"
                android:visibility="@{viewmodel.layoutState == viewmodel.layoutState.NOT_FRIEND? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.406"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>