<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.myapplication.ui.start.StartViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        >

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="239dp"
            android:layout_height="219dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="68dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hugo_222" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="137dp"
            android:layout_height="102dp"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:srcCompat="@drawable/business_3d_icon_24" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="260dp"
            android:layout_height="55dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/buttom"
            android:drawableLeft="@drawable/icons8_signin_48"
            android:onClick="@{() -> viewmodel.goToLoginPressed()}"
            android:text="@string/login"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline50" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="260dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttom"
            android:drawableLeft="@drawable/icons8_sign_up_48"
            android:onClick="@{() -> viewmodel.goToCreateAccountPressed()}"
            android:text="@string/Sign_Up"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".5" />

        <!--        <ImageView-->
        <!--            android:id="@+id/imageView"-->
        <!--            android:layout_width="70dp"-->
        <!--            android:layout_height="70dp"-->
        <!--            android:layout_marginTop="40dp"-->
        <!--            android:src="@drawable/chat_box"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.498"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            tools:layout_editor_absoluteY="73dp"-->
        <!--            android:contentDescription="@string/chat_icon" />-->

        <TextView
            android:id="@+id/textView"
            style="@style/BoldText"
            android:layout_width="261dp"
            android:layout_height="27dp"
            android:layout_marginTop="20dp"
            android:alpha=".8"
            android:gravity="center"
            android:text="@string/login_or_create_an_account_to_get_started"
            android:textColor="@color/blueText"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>